# Auto-cleaner-pro

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
UI/: app.py
examples/: cleaned_from_cli.csv.report.json  from_entry.csv  test_dates_mixed.csv  test_messy.csv  test_sample.csv
notebooks/: validation.ipynb
src/auto_cleaner_pro/: cleaning.py  pipeline.py
tests/: test_loader_and_cleaning.py
tools/: run_pipeline.py  test_cleaning.py  test_datetime.py  test_loader.py
ui/: app.py
